<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:background="@color/colorPrimaryDark"
    android:padding="5dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/txtClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:textColor="@color/white"
        android:text="@string/ex"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:gravity="center"
        android:background="@drawable/circlebackground"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/nexus"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/devPhoto"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developer"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ceo"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">



        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/location"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            android:drawableStart="@drawable/ic_location_on_black_24dp"
            android:drawableTint="@color/white"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:background="@color/orange"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/progressValue"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/progress"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:background="@color/green"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/clientsValue"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/clients"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:background="@color/blueLight"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/completedValue"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/completed"
                android:textColor="@color/white"/>
        </LinearLayout>
        
    </LinearLayout>


    <!--CONTACT INFO-->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/email"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:drawableTint="@color/white"
            android:drawablePadding="6dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/phone"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:drawableStart="@drawable/ic_smartphone_black_24dp"
            android:drawableTint="@color/white"
            android:drawablePadding="6dp"/>





</LinearLayout>