<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="inexus.dev.agstream.StreamDetail">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarStream"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"

            app:title="@string/app_name"
            app:expandedTitleMarginStart="8dp"
            app:expandedTitleMarginEnd="50dp"
            app:expandedTitleTextAppearance="@android:color/transparent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarStream"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                app:titleTextColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize" />


            <ImageView
                android:id="@+id/img_stream"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/stream"
                android:scaleType="centerCrop"
                android:background="@drawable/background"/>


        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            android:background="#fcfcfc"
            android:layout_margin="3dp"
            android:gravity="center">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="5dp"
                    android:layout_margin="5dp"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:textAllCaps="true"
                            android:textStyle="bold"
                            android:padding="3dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="Change Initiative Launches JESUS SAVES CAMPAIGN"/>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_margin="5dp">

                            <TextView
                                android:text="Post Date:"
                                android:textStyle="bold"
                                android:textColor="@color/colorPrimary"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                />

                            <TextView
                                android:id="@+id/txt_postDate"
                                android:text="March 28, 2018"
                                android:layout_marginStart="5dp"
                                android:textColor="@color/colorPrimary"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="10dp"
                    android:layout_margin="5dp">


                    <TextView
                        android:id="@+id/txtStream"
                        android:text="@string/dummyText"
                        android:textAlignment="textStart"
                        android:layout_gravity="center_vertical|start"
                        android:gravity="start"
                        android:padding="10dp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

                </android.support.v7.widget.CardView>


            </LinearLayout>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>



</android.support.design.widget.CoordinatorLayout>
